# drf-api-permissions-postgres

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
tasks/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
todo_api/: settings.py  urls.py
